# mysql-binlog-connector-rs

./: Cargo.toml  README.md
src/: binlog_error.rs  constants.rs  lib.rs
