[package]
name = "mysql-binlog-connector-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-std = "1.12.0"
byteorder = "1.5.0"
lazy_static = "1.4.0"
num_enum = "0.7.2"
openssl = "0.10.63"
serde = "1.0.195"
serde_json = "1.0.111"
serial_test = "3.0.0"
sha-1 = "0.10.1"
sha2 = "0.10.8"
thiserror = "1.0.56"
url = "2.5.0"
zstd = "0.13.0"
